--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3 text-center ">
                     <h2>Plusieur de nos clients sont satisfaits</h2>
-                    <img class="mx-auto rounded-circle col-lg-4" src="assets/img/team/5-friends.jpg" alt="client">
+                    <img class="mx-auto rounded-circle col-lg-4 img-fluid img-brand d-block mx-auto" src="assets/img/team/5-friends.jpg" alt="client">
                     <div id="counter" class="h1">0</div>
                 </div>
             </div>
